# src/main/java/reqhandler/LoginRequestHandler.java
@@ -2,6 +2,7 @@ package reqhandler;
 
 import dao.UserDao;
 import model.User;
+import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -21,8 +22,8 @@ public class LoginRequestHandler extends RequestHandler {
 
     private static Logger logger = Logger.getLogger(LoginRequestHandler.class);
 
-    @Value("${core.http.max_idle_time}")
-    private int maxIdleTime;
+    @Value("${core.api.token_timeout}")
+    private int tokenTimeout;
 
     @Value("${core.http.max_retry_time}")
     private int maxRetryTime;
@@ -38,9 +39,9 @@ public class LoginRequestHandler extends RequestHandler {
 
     public void login() {
         String phoneNum = this.postData.has("phoneNum") ? this.postData.getString("phoneNum") : null;
-        String post_passwd = this.postData.has("password") ? this.postData.getString("password") : null;
+        String password = this.postData.has("password") ? this.postData.getString("password") : null;
 
-        if (phoneNum == null || post_passwd == null) {
+        if (phoneNum == null || password == null) {
             this.responseData.put("error", "Username or password can not be empty");
             this.responseData.put("status", INCORRECT_USERNAME_OR_PASSWORD);
             return;
@@ -52,22 +53,23 @@ public class LoginRequestHandler extends RequestHandler {
         /*多次输入密码失败时直接返回*/
         if (Integer.parseInt(jedis.get(phoneNum)) <= 0) {
             logger.info(phoneNum + " try login in for " + maxRetryTime + " times but failed");
-            this.responseData.put("error", "Login too frequently ,please login in after " + jedis.ttl(phoneNum) + " seconds");
+            this.responseData.put("error", "Login too frequently ,please login in after "
+                    + jedis.ttl(phoneNum) + " seconds");
             this.responseData.put("status", AUTHENTICATION_ERROR_COUNTER_EXCEED);
             jedis.close();
             return;
         }
 
-        String password = userDao.getPassword(phoneNum);
-        if (post_passwd.equals(password)) {
-            /*将token缓存在redis数据库，用于后续页面请求*/
-            jedis.set(this.token, phoneNum, "NX", "EX", maxIdleTime);
+        String enc_password = userDao.getPassword(phoneNum);
+        if (password.equals(enc_password)) {
+            /*将计算token的除URL字段以外的相关值缓存在redis数据库，用于后续请求*/
+            String apiKey = UUID.randomUUID().toString().replaceAll("-", "");
+            String partToken = DigestUtils.md5Hex(enc_password + apiKey);
+            jedis.setex(phoneNum + "token", tokenTimeout, partToken);
 
-            /*为后续API请求设置apiKey*/
-            String apiKey = UUID.randomUUID().toString().replace("-", "");
-            if (userDao.setAppKey(apiKey, this.phoneNum) != 1) {
+            if (userDao.setApiKey(phoneNum, apiKey) != 1) {
                 this.responseData.put("status", UNKNOWN_ERROR);
-                this.responseData.put("message", "Failed to set apiKey");
+                this.responseData.put("message", "Failed to insert apiKey into database");
                 redisUtil.returnResource(jedis);
                 return;
             }
@@ -75,7 +77,7 @@ public class LoginRequestHandler extends RequestHandler {
             /*更新登录信息*/
             String lastLoginTime = new SimpleDateFormat(DATE_PATTERN).format(new Date());
             User user = new User();
-            user.setPhoneNum(this.phoneNum);
+            user.setPhoneNum(phoneNum);
             user.setLastLoginTime(lastLoginTime);
             user.setLastLoginIp(this.request.getRemoteAddr());
             user.setUserAgent(this.request.getHeader("User-Agent"));
@@ -86,30 +88,30 @@ public class LoginRequestHandler extends RequestHandler {
             this.responseData.put("message", "Login in success");
             this.responseData.put("status", SUCCESS);
             this.responseData.put("apiKey", apiKey);
-            logger.info("User  " + phoneNum + "  login in successfully");
+            logger.info("User  " + phoneNum + "  login in , IP : "
+                    + this.request.getRemoteAddr());
 
             /*数据库读取失败*/
-        } else if (password == null) {
+        } else if (enc_password == null) {
             this.responseData.put("error", "Internal Error");
             this.responseData.put("status", UNKNOWN_ERROR);
         } else {
             jedis.decr(phoneNum);
-            this.responseData.put("error", "Username or password is wrong");
+            this.responseData.put("message", "Username or password is wrong");
             this.responseData.put("status", INCORRECT_USERNAME_OR_PASSWORD);
         }
         redisUtil.returnResource(jedis);
     }
 
     public void logout() {
-        String token = this.cookieData.get("token");
         Jedis jedis = redisUtil.getJedis();
-        if (jedis.exists(token)) {
-            logger.info("User: " + jedis.get(token) + " logout");
-            jedis.del(token);
+        if (jedis.exists(this.token)) {
+            logger.info("User: " + jedis.get(this.token) + " logout");
+            jedis.del(this.token);
         }
         jedis.close();
         this.responseData.put("redirectUrl", "loginview");
-        this.responseData.put("success", "success log out");
+        this.responseData.put("message", this.phoneNum + " log out");
         this.responseData.put("status", SUCCESS);
     }
 
