# src/main/java/reqhandler/RequestHandler.java
@@ -10,18 +10,16 @@ public abstract class RequestHandler {
     public HashMap<String, String> urlParam;
     public JSONObject postData;
     public JSONObject responseData;
-    public HashMap<String, String> cookieData;
     public String token;
     public String phoneNum;
 
     public void initParam(String phoneNum, HttpServletRequest request, HashMap<String, String> urlParam,
-                          JSONObject postData, JSONObject responseData, HashMap<String, String> cookieData) {
+                          JSONObject postData, JSONObject responseData, String token) {
         this.request = request;
         this.urlParam = urlParam;
         this.postData = postData;
         this.responseData = responseData;
-        this.cookieData = cookieData;
-        this.token = cookieData.get("token");
+        this.token = token;
         this.phoneNum = phoneNum;
     }
 }
